# solr-classla

./: README.md  docker-compose.yml
.github/workflows/: lucene-grpc.yml
classla-grpc/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
classla-grpc/src/: analyzer_cli.py  analyzer_server.py  classla_pb2.py  classla_pb2_grpc.py  main.py
classla-grpc/tests/: test_classla_grpc.py
lucene-grpc/: .dockerignore  .gitignore  Dockerfile  build.gradle  settings.gradle
lucene-grpc/src/main/java/eu/murerzen/lucene_grpc/: GrpcAnalyzer.java
proto/: classla.proto
